# engram

./: .env.template  .gitignore  README.md  pyproject.toml
docs/: EIGENGRAM_SPEC.md  PATENT_DISCLOSURE.md  engram.js  index.html  multi-architecture.md
integrations/: __init__.py  llama_cpp_bridge.py
kvcos/: __init__.py
kvcos/api/: __init__.py  routes.py  schemas.py  server.py
kvcos/client/: __init__.py  python_client.py
kvcos/core/: __init__.py  blob_parser.py  block_pool.py  cache_spec.py  compression.py  config.py  fingerprint.py  manifold_index.py  retriever.py  serializer.py  state_extractor.py  types.py
kvcos/engram/: __init__.py  __main__.py  chunker.py  embedder.py  format.py  hnsw_index.py  index_c.py  knowledge_index.py  manifest.py  metadata_disambiguate.py  reader.py  retrieval.py  session_propagator.py  writer.py
kvcos/mar/: __init__.py
kvcos/storage/: __init__.py  backends.py  local.py
mcp/: CLAUDE_SESSION_PROTOCOL.md  engram_memory.py
npm-package/: README.md  package-lock.json  package.json  tsconfig.json
npm-package/src/: index.ts
paper/: engram.tex
results/: PAPER_TABLE.md  README.md
scripts/: compute_corpus_basis.py  demo_agent_session.py  diagnose_gemma4.py  egr_semantic_proof.py  generate_alignment_dataset.py  index_knowledge.py  paper_figures.py  setup.sh
tests/: conftest.py  test_blob_parser.py  test_block_pool.py  test_chunker.py  test_compression.py  test_eigengram.py  test_embedder.py  test_hnsw_index.py  test_integration_synthetic.py  test_iswa_blob_parser.py  test_iswa_bridge.py  test_iswa_fingerprint.py  test_iswa_types.py  test_knowledge_index.py  test_manifest.py  test_manifold_index.py  test_retriever.py  test_serializer.py  test_state_extractor.py
